--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.0",
+    "axios": "^0.27.2",
     "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
