--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
