--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "uuidv4": "^6.2.13",
     "zustand": "^4.1.1"
   },
@@ -24,6 +25,7 @@
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
